@@ -16,6 +16,7 @@ Improved loading .pok files: increased maximum pokes from 100 to 49152 pokes
 Improved 1 bit resample audio filter 
 
 
+Fix loading QL Superbasic programs when line lenght usually longer than 128 bytes
 Fixed segfaults when changing machines and having ZX Desktop windows opened
 Fixed easter egg anc cyrillic characters
 Fixed segfaults when initializing audio and video drivers
